# pretro_price_predict

./: .gitignore  Dockerfile  README.md  pyproject.toml
dashboard/: .gitignore  README.md  requirements.txt  streamlit_app.py
data_engineering/: data_engineering.ipynb  data_engineering.py  data_engineering_datasets.ipynb  data_utils.py
ml_model_serving/: client.py  requirements.txt  server.py
ml_model_training/: .env.example  __init__.py  final_model.pth  input_scaler_petro.joblib  ml_model_training.ipynb  ml_model_training.py  model_utils.py  output_scaler_petro.joblib  petro_dataset.py  petro_model.py  scaler_petro.joblib  train.py  tunning.py
utils/: .env.example  .env_model  __init__.py  lake_connector.py  logger.py
